--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,3 +59,11 @@
   padding: 40px;
   text-align: center;
 }
+
+.account_data{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
